--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -21,7 +21,7 @@ xpack.security.enabled: true
 #
 xpack.security.transport.ssl.enabled: true
 xpack.security.transport.ssl.verification_mode: certificate
-xpack.security.transport.ssl.certificate_authorities: [ ca.crt ]
+xpack.security.transport.ssl.certificate_authorities: [ca.crt]
 xpack.security.transport.ssl.certificate: elasticsearch.crt
 xpack.security.transport.ssl.key: elasticsearch.key
 
@@ -29,6 +29,8 @@ xpack.security.transport.ssl.key: elasticsearch.key
 ## see https://www.elastic.co/guide/en/elasticsearch/reference/current/configuring-tls.html#tls-http
 #
 xpack.security.http.ssl.enabled: true
-xpack.security.http.ssl.certificate_authorities: [ ca.crt ]
+xpack.security.http.ssl.certificate_authorities: [ca.crt]
 xpack.security.http.ssl.certificate: elasticsearch.crt
 xpack.security.http.ssl.key: elasticsearch.key
+
+xpack.security.authc.api_key.enabled: true
